--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LLcuidado_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -14,37 +15,43 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SCRbase"
+        tools:ignore="VisualLintBounds">
 
         <LinearLayout
             android:id="@+id/LLicones"
-            android:layout_width="300dp"
+            android:layout_width="280dp"
             android:layout_height="60dp"
             android:gravity="center_horizontal|center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
             <ImageButton
                 android:id="@+id/imgbtn_home"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_home"
+                tools:ignore="TouchTargetSizeCheck"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:contentDescription="@string/imgbtn_video"
-                android:src="@android:drawable/btn_star" />
+                android:src="@android:drawable/btn_star"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
                 android:id="@+id/imgbtn_perfil"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_perfil"
-                android:src="@android:drawable/btn_star" />
+                android:src="@android:drawable/btn_star"
+                tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
     </LinearLayout>
@@ -66,16 +73,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/txt_inicio"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <ScrollView
         android:id="@+id/SCRbase"
-        android:layout_width="430dp"
-        android:layout_height="747dp"
+        android:layout_width="397dp"
+        android:layout_height="687dp"
         android:contentDescription="@string/Base"
         app:layout_constraintBottom_toTopOf="@+id/LLnavbar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LLrotulo">
 
@@ -89,21 +97,126 @@
             <LinearLayout
                 android:id="@+id/LLmensagem"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="170dp"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txt_ola"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="@string/txt_ola"
+                    android:textColor="@color/gray_blue"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/LLdescapp"
+                        android:layout_width="190dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"
+                        tools:ignore="TextSizeCheck">
+
+                        <TextView
+                            android:id="@+id/txt_bem_vindo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="15dp"
+                            android:text="@string/txt_bem_vindo"
+                            android:textColor="@color/gray_blue"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txt_desc_app"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:letterSpacing="0.1"
+                            android:lineSpacingExtra="3dp"
+                            android:text="@string/txt_descapp"
+                            android:textColor="@color/gray_blue" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/img_pet"
+                        android:layout_width="113dp"
+                        android:layout_height="113dp"
+                        android:layout_margin="10dp"
+                        android:contentDescription="@string/img_pet"
+                        android:src="@tools:sample/avatars" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/LLcuidado"
                 android:layout_width="match_parent"
                 android:layout_height="190dp"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/LLvermais"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtCuidado"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:letterSpacing="0.1"
+                        android:text="@string/txt_cuidado"
+                        android:textColor="@color/gray_blue"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txt_vermais"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="110dp"
+                        android:text="@string/txt_vermais"
+                        android:textColor="@color/gray_blue"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/LLimg_cuidado"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/img_cuidado_dog"
+                        android:layout_width="146.5dp"
+                        android:layout_height="146.5dp"
+                        android:layout_marginEnd="20dp"
+                        android:contentDescription="@string/img_dog"
+                        android:src="@tools:sample/avatars" />
+
+                    <ImageView
+                        android:id="@+id/img_cuidado_cat"
+                        android:layout_width="146.5dp"
+                        android:layout_height="146.5dp"
+                        android:layout_marginStart="20dp"
+                        android:contentDescription="@string/img_cat"
+                        android:src="@tools:sample/avatars" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -113,22 +226,93 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="30dp"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="vertical"
+                tools:ignore="TextSizeCheck">
 
-            <HorizontalScrollView
-                android:id="@+id/scr_videos"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="30dp">
-
-                <LinearLayout
-                    android:id="@+id/LLvideos"
+                <TextView
+                    android:id="@+id/txt_socorro"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:letterSpacing="0.1"
+                    android:text="@string/txt_socorro"
+                    android:textColor="@color/gray_blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spinner_socorro"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"></LinearLayout>
-            </HorizontalScrollView>
+                    android:layout_marginTop="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/LLtutorial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txt_video"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:letterSpacing="0.1"
+                    android:text="@string/txt_tutoriais"
+                    android:textColor="@color/gray_blue"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <HorizontalScrollView
+                    android:id="@+id/scr_video"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:contentDescription="@string/scr_base"
+                    android:scrollbars="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/LLvideo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/img_video"
+                            android:layout_width="150dp"
+                            android:layout_height="80dp"
+                            android:layout_marginEnd="20dp"
+                            android:contentDescription="@string/img_video"
+                            android:src="@tools:sample/avatars" />
+
+                        <ImageView
+                            android:id="@+id/img_video2"
+                            android:layout_width="150dp"
+                            android:layout_height="80dp"
+                            android:layout_marginEnd="20dp"
+                            android:contentDescription="@string/img_video"
+                            android:src="@tools:sample/avatars" />
+
+                        <ImageView
+                            android:id="@+id/img_video3"
+                            android:layout_width="150dp"
+                            android:layout_height="80dp"
+                            android:layout_marginEnd="20dp"
+                            android:contentDescription="@string/img_video"
+                            android:src="@tools:sample/avatars" />
+
+                        <ImageView
+                            android:id="@+id/img_mais"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_marginEnd="20dp"
+                            android:contentDescription="@string/img_mais"
+                            android:src="@tools:sample/avatars" />
+                    </LinearLayout>
+                </HorizontalScrollView>
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
