--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_gray">#718EAD</color>
+    <color name="gray_blue">#4F6C79</color>
+    <color name="light_green">#E9F8FF</color>
+    <color name="light_brown">#AD8D71</color>
+    <color name="brown">#79634F</color>
 </resources>
