--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         tools:ignore="VisualLintBounds">
 
         <TextView
-            android:id="@+id/txt_inicio"
+            android:id="@+id/txt_rotulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/txt_inicio"
