--- a/app/src/main/res/layout/activity_primeiros_socorros.xml
+++ b/app/src/main/res/layout/activity_primeiros_socorros.xml
@@ -102,6 +102,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="30dp"
+                android:backgroundTint="@color/gray_blue"
                 android:contentDescription="@string/txt_nome_tipo">
 
                 <com.google.android.material.chip.ChipGroup
@@ -113,7 +114,10 @@
                         style="@style/Widget.Material3.Chip.Filter.Elevated"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
+                        android:backgroundTintMode="screen"
                         android:text="@string/scr_txt_engasgo"
+                        android:textColor="@color/light_green"
+                        app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
@@ -122,6 +126,8 @@
                         android:layout_width="110dp"
                         android:layout_height="40dp"
                         android:text="@string/scr_txt_queima"
+                        android:textColor="@color/light_green"
+                        app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
@@ -130,6 +136,8 @@
                         android:layout_width="80dp"
                         android:layout_height="40dp"
                         android:text="@string/scr_txt_frat"
+                        android:textColor="@color/light_green"
+                        app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
@@ -138,6 +146,8 @@
                         android:layout_width="110dp"
                         android:layout_height="40dp"
                         android:text="@string/scr_txt_into"
+                        android:textColor="@color/light_green"
+                        app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
@@ -146,6 +156,8 @@
                         android:layout_width="70dp"
                         android:layout_height="40dp"
                         android:text="@string/scr_txt_corte"
+                        android:textColor="@color/light_green"
+                        app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
                 </com.google.android.material.chip.ChipGroup>
             </HorizontalScrollView>
@@ -213,6 +225,18 @@
                     android:textSize="14sp"
                     tools:ignore="TextContrastCheck" />
 
+                <TextView
+                    android:id="@+id/txt_aviso_final"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:letterSpacing="0.05"
+                    android:text="@string/txt_cuidado"
+                    android:textAlignment="inherit"
+                    android:textColor="@color/blue_gray"
+                    android:textSize="14sp"
+                    tools:ignore="TextContrastCheck" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -246,8 +270,7 @@
                     <ImageView
                         android:id="@+id/img_tel"
                         android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@tools:sample/avatars" />
+                        android:layout_height="50dp"/>
 
                     <TextView
                         android:id="@+id/txt_samu"
@@ -274,8 +297,7 @@
                     <ImageView
                         android:id="@+id/img_localizacao"
                         android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@tools:sample/avatars" />
+                        android:layout_height="50dp"/>
 
                     <TextView
                         android:id="@+id/_localizacao"
