--- a/app/src/main/res/layout/activity_tipos.xml
+++ b/app/src/main/res/layout/activity_tipos.xml
@@ -32,8 +32,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_home"
-                tools:ignore="TouchTargetSizeCheck"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:ignore="TouchTargetSizeCheck"/>
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
@@ -42,7 +41,6 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:contentDescription="@string/imgbtn_video"
-                android:src="@android:drawable/btn_star"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -50,7 +48,6 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_perfil"
-                android:src="@android:drawable/btn_star"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
@@ -118,8 +115,7 @@
                         android:layout_width="126.2dp"
                         android:layout_height="126.2dp"
                         android:layout_margin="10dp"
-                        android:contentDescription="@string/img_pet"
-                        android:src="@tools:sample/avatars" />
+                        android:contentDescription="@string/img_pet"/>
 
                     <TextView
                         android:id="@+id/txt_cao"
@@ -147,8 +143,7 @@
                         android:layout_width="126.2dp"
                         android:layout_height="126.2dp"
                         android:layout_margin="10dp"
-                        android:contentDescription="@string/img_pet"
-                        android:src="@tools:sample/avatars" />
+                        android:contentDescription="@string/img_pet"/>
 
                     <TextView
                         android:id="@+id/txt_gato"
@@ -180,8 +175,7 @@
                     android:layout_height="80dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="10dp"
-                    android:contentDescription="@string/img_pet"
-                    android:src="@tools:sample/avatars" />
+                    android:contentDescription="@string/img_pet"/>
 
                 <TextView
                     android:id="@+id/txt_bird"
@@ -212,8 +206,7 @@
                     android:layout_height="80dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="10dp"
-                    android:contentDescription="@string/img_pet"
-                    android:src="@tools:sample/avatars" />
+                    android:contentDescription="@string/img_pet" />
 
                 <TextView
                     android:id="@+id/txt_coelho"
@@ -244,8 +237,7 @@
                     android:layout_height="80dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="10dp"
-                    android:contentDescription="@string/img_pet"
-                    android:src="@tools:sample/avatars" />
+                    android:contentDescription="@string/img_pet"/>
 
                 <TextView
                     android:id="@+id/txt_roedor"
