--- a/app/src/main/res/layout/activity_tutoriais.xml
+++ b/app/src/main/res/layout/activity_tutoriais.xml
@@ -155,8 +155,7 @@
                             android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:layout_marginStart="20dp"
-                            android:contentDescription="@string/img_video"
-                            android:src="@tools:sample/avatars" />
+                            android:contentDescription="@string/img_video" />
 
                         <TextView
                             android:id="@+id/txt_video"
@@ -194,8 +193,7 @@
                             android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:layout_marginStart="20dp"
-                            android:contentDescription="@string/img_video"
-                            android:src="@tools:sample/avatars" />
+                            android:contentDescription="@string/img_video" />
 
                         <TextView
                             android:id="@+id/txt_video2"
@@ -233,8 +231,7 @@
                             android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:layout_marginStart="20dp"
-                            android:contentDescription="@string/img_video"
-                            android:src="@tools:sample/avatars" />
+                            android:contentDescription="@string/img_video" />
 
                         <TextView
                             android:id="@+id/txt_video3"
@@ -288,8 +285,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_home"
-                tools:ignore="TouchTargetSizeCheck"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:ignore="TouchTargetSizeCheck"/>
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
@@ -298,7 +294,6 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:contentDescription="@string/imgbtn_video"
-                android:src="@android:drawable/btn_star"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -306,7 +301,6 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_perfil"
-                android:src="@android:drawable/btn_star"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
