--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:id="@+id/LLicones"
             android:layout_width="280dp"
             android:layout_height="60dp"
+            android:background="@drawable/nav_bar"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="horizontal"
             tools:ignore="UselessParent">
@@ -33,7 +34,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_home"
-                tools:ignore="TouchTargetSizeCheck"/>
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
@@ -58,6 +59,7 @@
         android:id="@+id/LLrotulo"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:background="@drawable/fundo_r_tulo"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/SCRbase"
@@ -114,6 +116,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@drawable/borda_redonda"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -151,7 +154,8 @@
                         android:layout_width="113dp"
                         android:layout_height="113dp"
                         android:layout_margin="10dp"
-                        android:contentDescription="@string/img_pet" />
+                        android:contentDescription="@string/img_pet"
+                        app:srcCompat="@drawable/img_borda" />
                 </LinearLayout>
 
             </LinearLayout>
